Update blog post titles for clarity and consistency

--- a/public/blogs/data-lab_2019-03-09.md
+++ b/public/blogs/data-lab_2019-03-09.md
@@ -1,6 +1,6 @@
-这是我关于深入理解计算机系统这本书配套实验之一数据实验的实现思路，所有代码都在linux/x86上验证过是可行的，但不保证是最优解
+# 数据实验
 
-## 实验介绍
+这是我关于深入理解计算机系统这本书配套实验之一数据实验的实现思路，所有代码都在linux/x86上验证过是可行的，但不保证是最优解
 
 本实验包括实现简单的逻辑函数、二元补码函数和浮点函数，但使用的是高度受限的c语言子集。帮助你理解C数据类型的位级表示以及数据操作的位级行为。
 
