--- a/public/blogs/dns_2022-09-19.md
+++ b/public/blogs/dns_2022-09-19.md
@@ -1,6 +1,6 @@
-dns是用来解析域名的，**在传输层依托于udp**，客户端提交一个域名，dns返回一个合理的ip地址。然而这个过程并不总是一帆风顺的。<!--more-->
+# DNS: 解析错误、不够智能、慢？试试httpDNS吧！
 
-# DNS有什么作用？
+dns是用来解析域名的，**在传输层依托于udp**，客户端提交一个域名，dns返回一个合理的ip地址。然而这个过程并不总是一帆风顺的。<!--more-->
 
 首先简要的梳理一下dns的工作流程，这帮助我们更容易理解为什么会有上面三个问题。
 
