--- a/public/blogs/grpc_2021-11-10.md
+++ b/public/blogs/grpc_2021-11-10.md
@@ -1,6 +1,6 @@
-本文简单介绍grpc的作用和原理，然后介绍一些实用的功能，帮你构建一个安全高效的grpc服务。
+# grpc简介
 
-# grpc有什么用？
+本文简单介绍grpc的作用和原理，然后介绍一些实用的功能，帮你构建一个安全高效的grpc服务。
 
 第一个作用是沟通，应用程序可以用不同的编程语言构建，比如golang，python，java，swift。这些程序之间字幕沟通呢？
 通常我们使用的是微服务框架，它要保证后端不同语言的服务遵循相同的api约定来进行沟通。比如沟通渠道，验证机制，载荷格式，数据模型，错误处理。
