--- a/public/blogs/mongodb_2023-03-17.md
+++ b/public/blogs/mongodb_2023-03-17.md
@@ -1,6 +1,6 @@
-本文将从开发者的角度，介绍 mongoDB 中最重要的特性。
+# MongoDB 概览
 
-# 关于 MongoDB
+本文将从开发者的角度，介绍 mongoDB 中最重要的特性。
 
 mongoDB 是一个以 JSON 为数据模型的文档数据库，上市公司 MongoDB Inc.开发，总部位于美国。善于横向扩展，并发度超过 mysql。
 
