--- a/public/blogs/mysql0x1_2020-02-23.md
+++ b/public/blogs/mysql0x1_2020-02-23.md
@@ -1,6 +1,6 @@
-学习一个数据库，最重要的是学习它的数据模型。InnoDB的索引模型是B+树结构的，本文将从最基础的二叉树开始，循序渐进的介绍到B+树。
+# mysql 深入之索引原理
 
-# 二叉树
+学习一个数据库，最重要的是学习它的数据模型。InnoDB的索引模型是B+树结构的，本文将从最基础的二叉树开始，循序渐进的介绍到B+树。
 
 每个节点有两个叉的数据结构。另外，如果最后一层的叶子节点都靠左排列，并且除了最后一层，其他层的节点个数都要达到最大，这种二叉树叫做完全二叉树。
 
