--- a/public/blogs/mysql0x2_2020-02-25.md
+++ b/public/blogs/mysql0x2_2020-02-25.md
@@ -1,6 +1,6 @@
-索引的意义总结为一句话就是为了提高查询性能。但是一个出色的产品光有性能是不够的，必须还能稳定安全的工作，本文介绍的内容关乎mysql的稳定和安全。
+# mysql 日志
 
-# 日志
+索引的意义总结为一句话就是为了提高查询性能。但是一个出色的产品光有性能是不够的，必须还能稳定安全的工作，本文介绍的内容关乎mysql的稳定和安全。
 
 mysql有两个重要的日志模块，工作在server层的binlog和innoDB特有的redo log。
 
